Table Usuario {
  id_usuario varchar(30) [pk]
  primer_nombre varchar(30)
  segundo_nombre varchar(30)
  primer_apellido varchar(30)
  segundo_apellido varchar(30)
  correo varchar(100)
  fecha_registro datetime
  salario_mensual decimal(12,2)
  estado bool

  creado_por varchar(30)
  modificado_por varchar(30)
  creado_en datetime
  modificado_en datetime
}

Table Presupuesto {
  id_presupuesto varchar(30) [pk]
  id_usuario varchar(30)
  nombre_descriptivo varchar(60)
  init_year int
  init_month int
  end_year int
  end_month int
  total_ingresos decimal(12,2)
  total_gastos decimal(12,2)
  total_ahorro decimal(12,2)
  fecha_creacion datetime
  estado varchar(15)

  creado_por varchar(30)
  modificado_por varchar(30)
  creado_en datetime
  modificado_en datetime
}

Table Categoria {
  id_categoria varchar(30) [pk]
  id_usuario varchar(30)
  nombre_categoria varchar(50)
  descripcion varchar(150)
  tipo_categoria varchar(10)

  creado_por varchar(30)
  modificado_por varchar(30)
  creado_en datetime
  modificado_en datetime
}

Table Subcategoria {
  id_subcategoria varchar(30) [pk]
  id_categoria varchar(30)
  nombre_subcategoria varchar(50)
  descripcion varchar(150)
  indicador_activo bool
  es_defecto bool

  creado_por varchar(30)
  modificado_por varchar(30)
  creado_en datetime
  modificado_en datetime
}

Table PresupuestoDetalle {
  id_detalle varchar(30) [pk]
  id_presupuesto varchar(30)
  id_subcategoria varchar(30)
  monto_mensual decimal(12,2)
  observaciones varchar(200)

  creado_por varchar(30)
  modificado_por varchar(30)
  creado_en datetime
  modificado_en datetime
}

Table ObligacionFija {
  id_obligacion varchar(30) [pk]
  id_usuario varchar(30)
  id_subcategoria varchar(30)
  nombre varchar(80)
  descripcion varchar(200)
  monto_fijo_mensual decimal(12,2)
  dia_vencimiento int
  vigente bool
  fecha_inicio date
  fecha_fin date

  creado_por varchar(30)
  modificado_por varchar(30)
  creado_en datetime
  modificado_en datetime
}

Table Transaccion {
  id_transaccion varchar(30) [pk]
  id_usuario varchar(30)
  id_presupuesto varchar(30)
  anio int
  mes int
  id_subcategoria varchar(30)
  tipo varchar(10)
  descripcion varchar(200)
  monto decimal(12,2)
  fecha date
  metodo_pago varchar(20)
  num_factura varchar(40)
  observaciones varchar(200)
  fecha_registro datetime

  creado_por varchar(30)
  modificado_por varchar(30)
  creado_en datetime
  modificado_en datetime
}

Table ObligacionFija_Transaccion {
  id_relacion varchar(30) [pk]
  id_obligacion varchar(30)
  id_transaccion varchar(30)

  creado_por varchar(30)
  modificado_por varchar(30)
  creado_en datetime
  modificado_en datetime
}

Ref: Usuario.id_usuario < Presupuesto.id_usuario
Ref: Usuario.id_usuario < Categoria.id_usuario
Ref: Categoria.id_categoria < Subcategoria.id_categoria
Ref: Presupuesto.id_presupuesto < PresupuestoDetalle.id_presupuesto
Ref: Subcategoria.id_subcategoria < PresupuestoDetalle.id_subcategoria
Ref: Usuario.id_usuario < ObligacionFija.id_usuario
Ref: Subcategoria.id_subcategoria < ObligacionFija.id_subcategoria
Ref: Usuario.id_usuario < Transaccion.id_usuario
Ref: Presupuesto.id_presupuesto < Transaccion.id_presupuesto
Ref: Subcategoria.id_subcategoria < Transaccion.id_subcategoria

Ref: ObligacionFija.id_obligacion < ObligacionFija_Transaccion.id_obligacion
Ref: Transaccion.id_transaccion < ObligacionFija_Transaccion.id_transaccion
